# pyThunderbird

./: .components.yaml  .gitignore  .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  python-app.yml
scripts/: blackisort  doc  folder_check  get_sample_mboxes  install  run
search/: search_index.json
templates/: base.html  index.html  macros.html  mail.html
tests/: TestMail.py  base_thunderbird.py  testMail.py  test_archive.py  test_dateparser.py  test_github.py  test_gloda.py  test_index_robustness.py  test_index_update.py  test_search.py  test_webserver_api.py
thunderbird/: archive.py  github.py  mail.py  mail_cmd.py  profiler.py  search.py  tb_webserver.py  version.py  webserver.py
